Employee can see journey report
- Move calculation of worked hours to a Command.
- Refactor set_worked_hours for Assistance making it shorter.
- Validate a Work Day is unique by date and employee id.
- Generate seed data.
- Fix typo in assistances model spec.
