# app/models/anomaly.rb
@@ -1,5 +1,9 @@
 class Anomaly < ApplicationRecord
 
+  # Scopes
+  scope :by_day, ->(start_date, end_date) {
+		where(day: start_date.beginning_of_day...end_date.end_of_day) }
+
   # Associations
   belongs_to :employee
 
