# app/models/assistance.rb
@@ -1,9 +1,15 @@
 # :nodoc:
 class Assistance < ApplicationRecord
 
+  # Callbacks
   # Calculate worked hours for every assistance of kind 'out' saved
   after_save :set_worked_hours
 
+  # Scopes
+  scope :by_day, ->(start_date, end_date) {
+    where(happening_at: start_date.beginning_of_day...end_date.end_of_day) }
+    
+  # Enums
   enum kind: {
     out: 'out',
     in: 'in'
@@ -20,14 +26,10 @@ class Assistance < ApplicationRecord
   #
   def set_worked_hours
     if out?
-      worked_hours = employee.calculate_worked_hours(happening_at)
-      workday = WorkDay.where(day: happening_at.midnight..happening_at.end_of_day)
-      WorkDay.create!(employee: employee, total_hours: worked_hours, day: happening_at)
-      if workday.empty?
-        WorkDay.create!(employee: employee, total_hours: worked_hours, day: happening_at)
-      else
-        workday.first.update(total_hours: worked_hours)
-      end
+      hours = CalculateWorkedHours.for(employee: employee, day: happening_at)
+      date = happening_at.getlocal.midnight
+      work_day = WorkDay.find_or_initialize_by(day: date, employee: employee)
+      work_day.update(total_hours: hours)                              
     end
   end
 
